# autotrader

./: .gitignore  .pre-commit-config.yaml  .roorules  AGENT.md  CHANGELOG.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  LIMITATIONS.md  LINKS.md  MANIFEST.in  MODEL.md  MODELS.md  Makefile  PROMPT.md  PROMPT2.md  README.md  SPEC.md  autotrader.py  model_summary.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_logging_system.py
.github/workflows/: tests.yml
.windsurf/rules/: agent.md
autotrader/: __init__.py  cli.py
autotrader/api/: __init__.py
autotrader/config/: .env.template  README.md  __init__.py  cli.py  config.py  config_development.json  config_production.json  config_staging.json  config_templates.py  default_config.py  default_config.yaml  settings.py
autotrader/core/: __init__.py  config.py  continuous_autotrader.py  engine.py  state_manager.py  trader.py
autotrader/ml/: __init__.py  checkpointing.py  continuous_learner.py  feature_engineer.py  indicators.py  model_manager.py  models.py  neural_network.py  training.py
autotrader/trading/: __init__.py  portfolio.py  signals.py  simulator.py
autotrader/utils/: README.md  __init__.py  alerting.py  display_manager.py  error_handler.py  exceptions.py  helpers.py  logging_config.py  logging_example.py  logging_helpers.py  logging_settings.py
spec/: SPEC.md
specs/: SPEC.md
tests/: Makefile  README.md  autotrader_tests.py  conftest.py  pytest.ini  requirements.txt  test_api_integration.py  test_autotrader.py  test_config.py  test_data_management.py  test_error_handling.py  test_integration.py  test_machine_learning.py  test_neural_network.py  test_performance.py  test_trading_simulation.py  test_utils.py
